# Tn

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  BUG实测.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  MANUAL.md  README.md  README.zh-CN.md  TODO.md  UI.md  deny.toml  findings.md  progress.md  task_plan.md  testLong.md  待优化清单.md  问题与修正.md
.cargo/: config.toml
.planning/: .active_plan
.planning/agent-host-platform/: findings.md  progress.md  task_plan.md
.planning/editor-path-check/: findings.md  progress.md  task_plan.md
.planning/tn-editor-ux/: findings.md  progress.md  task_plan.md
.qoder/repowiki/knowledge/zh/: _index.yaml
.qoder/specs/: SSH模块连接与UI修复_e7c19543.md
config/: config.toml
config/themes/: tn-dark.toml
crates/tn-agent/: Cargo.toml
crates/tn-agent/src/: adapter.rs  descriptor.rs  event.rs  external.rs  id.rs  lib.rs  pricing.rs  registry.rs  transcript.rs  usage.rs
crates/tn-ai/: Cargo.toml
crates/tn-ai/src/: adapter.rs  claude.rs  codex.rs  detect.rs  lib.rs  pricing.rs  usage_windows.rs
crates/tn-app/: Cargo.toml  build.rs  installer.nsi
crates/tn-app/src/: main.rs
crates/tn-blocks/: Cargo.toml
crates/tn-blocks/src/: lib.rs
crates/tn-cli/: Cargo.toml
crates/tn-cli/src/: main.rs
crates/tn-cli/tests/: conpty_pipeline.rs
crates/tn-config/: Cargo.toml
crates/tn-config/src/: color.rs  config.rs  lib.rs  paths.rs  quick_terminal.rs  theme.rs
crates/tn-core/: Cargo.toml
crates/tn-core/benches/: engine.rs
crates/tn-core/src/: lib.rs
crates/tn-editor/: Cargo.toml
crates/tn-editor/src/: lib.rs  line_layout.rs
crates/tn-pty/: Cargo.toml
crates/tn-pty/src/: lib.rs  local.rs  remote_cmd.rs  remote_fs.rs  ssh.rs  wsl.rs
crates/tn-shell/: Cargo.toml
crates/tn-shell/src/: integration.rs  lib.rs
crates/tn-ui/: Cargo.toml
crates/tn-ui/assets/pet/: bichon.json  golden.json  maltese.json  poodle.json  shepherd.json  shihtzu.json  toy_ball.json  toy_bone.json  westie.json
crates/tn-ui/src/: agent_host.rs  assets.rs  block_view.rs  explorer.rs  gitutil.rs  input.rs  layout.rs  lib.rs  local_dir_picker.rs  perf.rs  pet.rs  pet_lottie.rs  platform.rs  pricing_sync.rs  quick_look.rs  quick_terminal.rs  remote_dir_picker.rs  remote_git.rs  ssh_recents.rs  style.rs  terminal_view.rs  usage_display.rs  viewer.rs  welcome.rs  workspace.rs
crates/tn-ui/src/editor/: diff.rs  geometry.rs  mod.rs  motion.rs  pane.rs  prepaint.rs  session.rs
crates/tn-ui/src/terminal_view/: header.rs  io.rs  launch.rs  mod.rs
design/: README.md  SPEC.md  calm-glass.css  mockup.html  phosphor.css  原型与真机截图差异总结.md
design/panels/: 01-window-chrome.html  02-workspace-panes.html  03-quicklook-editor.html  03-side-panels.html  04-ghost-terminal.html  04-overlays.html  05-pet-system.html  05-states.html  06-overlays.html  06-ssh.html  07-states.html  08-app-icon.html  index.html
design/pet-lottie/: README.md
design/pet-lottie/script/: gen_pet_lottie.mjs
design/真机截图/: README.md
design/真机截图/命令面板/: 未做.md
docs/: BLUEPRINT.md  BUG发现.md  CSS_TO_GPUI.md  REFERENCES.md  UI-CATALOG.md  UX-DESIGN.md  产品体验索引.md  产品设计.md  优化日志.md  修复与优化记录索引.md  共享记忆索引.md  参考资料.md  外部参考资料索引.md  已知问题索引.md  文档治理索引.md  新增模块.md  新增模块索引.md  未修复.md  架构蓝图.md  样式还原手册.md  界面样式实现规则.md  系统架构索引.md  设计索引.md  项目当前功能与状态.md
docs/superpowers/plans/: 2026-06-13-agent-workdir-picker.md  2026-06-24-terminal-delete-cursor-motion.md
docs/superpowers/specs/: 2026-06-12-宠物系统原型空间共演设计.md  2026-06-13-agent-workdir-picker-design.md
docs/test/: README.md  mockup_replica.rs  panels_replica.rs
docs/todo/: 2026-06-08-agent-surface-shell-agent.md  2026-06-08-large-document-splitting.md  2026-06-08-task-record-system.md
docs/产品体验/: 平铺分屏与欢迎页.md  快速预览与编辑.md  智能体用量与诚实原则.md  玻璃视觉原则.md  窗口框架与面板映射.md  终端交互体验.md  远程连接体验.md
docs/任务/: 2026-06-08-shell内代理正文显示修复.md  2026-06-08-大型文档拆分.md  2026-06-08-构建任务记录体系.md  2026-06-09-QuickLook外部保存刷新修复.md  2026-06-09-QuickLook外部变更焦点修复.md  2026-06-09-QuickLook输入法与软换行选择修复.md  2026-06-09-TnE-16软换行接入.md  2026-06-09-TnE-18-typing-effects.md  2026-06-09-TnE-19-20-EditorPane升级.md  2026-06-09-TnE-21全局回归与文档收尾.md  2026-06-09-文档功能逻辑漏洞修复.md  2026-06-09-文档管理方案skill化.md  2026-06-10-EditorPane轻量IDE改造规划.md  2026-06-10-Tn宠物系统原型设计.md  2026-06-10-宠物上下文感知规则更新.md  2026-06-10-宠物系统实现.md  2026-06-10-小狗宠物家族重做.md  2026-06-10-样式守卫全量删除.md  2026-06-10-移除独立EditorPane.md  2026-06-10-终端项目互联网调研.md  2026-06-10-项目功能详细整理.md  2026-06-10-项目当前功能与状态.md  2026-06-10-项目文档初始化.md  2026-06-11-原型与真机截图像素级复审.md  2026-06-11-原型与真机截图差异总结.md  2026-06-11-原型截图样式逐页复原.md  2026-06-11-按截图差异修正磷光样式.md  2026-06-11-真机截图二轮像素复审.md  2026-06-11-磷光实现改造与宠物系统接入.md  2026-06-11-磷光设计语言与原型重做.md  2026-06-12-BUG发现清单处理.md  2026-06-12-宠物系统原型空间共演板H.md  2026-06-12-宠物系统规则整理.md  2026-06-12-宠物规则v2.2互动记忆版.md  2026-06-12-宠物规则v2.3磷光通道版.md  2026-06-12-宠物规则v2陪伴版.md  2026-06-13-Agent工作目录选择.md  2026-06-13-SSH连接进度与重试上限.md  2026-06-13-agent历史滚动与本地化.md  2026-06-13-agent自管transcript设计.md  (+35 more)
docs/修复与优化/: 基础性能与审查勘误.md  快速预览性能与文件预览.md  快速预览编辑器近期变更.md  文件树与资源管理器优化.md  智能体活动栏与正文显示.md  每窗格工作区上下文.md  终端滚动与窗口尺寸.md  远端与远程连接器.md
docs/共享记忆/: 协作入口规则.md  后续事项与路线提示.md  图形界面与渲染坑位.md  工作区与构建约定.md  焦点与输入法坑位.md  终端与进程坑位.md  视窗系统与工具链坑位.md  踩坑记录.md
docs/参考资料/: Tn-Block化终端重构技术报告.md  不采纳清单与深挖入口.md  图形处理器文字渲染参考.md  幽灵终端集成与配置参考.md  微软终端输入与伪终端.md  终端项目互联网调研报告.md
docs/命令历史与检索/: README.md  设计方案.md
docs/宠物/: README.md  宠物交互动画实现方案.md  宠物系统规则.md  小狗家族设计.md
docs/已知问题/: 快速预览编辑器待验证与退出条件.md  快速预览编辑器执行包指导.md  快速预览编辑器用户体验升级.md  欢迎页最近目录数据源.md  真机视觉与工作区跟随待验证.md  输入与键位待处理.md  远端文件系统端到端验证.md  页面样式升级需求待澄清.md
docs/文档治理/: 文档盘点与首批拆分方案.md
docs/新增模块/: Tn轻量IDE编辑器.md  安全外壳远程连接.md  安全外壳连接体验.md  应用内智能体编辑器.md  智能体宿主平台化.md  远端文件服务与改动流.md
docs/架构/: 工作区与代码包边界.md  智能体宿主平台.md  架构总览与关键决策.md  终端数据流.md  终端渲染与界面宿主.md  编辑器与快速预览.md  路线图与开发流程.md  远端与安全外壳架构.md
docs/界面样式/: 界面翻译规则.md  组件规格与自动生成数值.md  视觉守卫和生成流程.md  设计真源与还原工作流.md
docs/设计/: 磷光设计语言.md
docs/质量保障/: README.md  单元测试计划.md  性能分析报告.md
scripts/: gen_icon.py  install.ps1
target-check/: .rustc_info.json
target-check/debug/.fingerprint/adler2-99e50a3f3d387414/: lib-adler2  lib-adler2.json
test_load/: Cargo.toml
test_load/src/: main.rs
(+222 files in other folders)
