[workspace]
resolver = "2"
members = [
    "crates/tn-core",
    "crates/tn-pty",
    "crates/tn-config",
    "crates/tn-shell",
    "crates/tn-blocks",
    "crates/tn-ai",
    "crates/tn-cli",
    "crates/tn-ui",
    "crates/tn-app",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
rust-version = "1.85"
repository = "https://github.com/tingruiyi/Tn"

[workspace.dependencies]
# internal crates
tn-core = { path = "crates/tn-core" }
tn-pty = { path = "crates/tn-pty" }
tn-config = { path = "crates/tn-config" }
tn-shell = { path = "crates/tn-shell" }
tn-blocks = { path = "crates/tn-blocks" }
tn-ai = { path = "crates/tn-ai" }
tn-ui = { path = "crates/tn-ui" }

# GPU UI framework (Zed). DirectX 11 + DirectWrite on Windows.
gpui = "0.2"

# Win32 glue for the Quick Terminal (M5): global hotkey (RegisterHotKey) +
# topmost/borderless floating window (SetWindowPos) that gpui doesn't expose.
# Pinned to gpui's `windows` version so the crate is shared, not duplicated.
windows = "0.61"
raw-window-handle = "0.6"  # extract the OS HWND from a gpui Window

# terminal engine + pty
alacritty_terminal = "0.26"
portable-pty = "0.9"
vte = "0.15"   # low-level VT parser for the shell-integration OSC bypass (tn-shell)

# async (pty pumps; ssh backend in M2)
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "sync", "macros", "time"] }
futures = "0.3"

# SSH backend (M2b). russh gives async channels; we bridge to the sync PtyBackend.
# Use the `ring` crypto backend instead of the default `aws-lc-rs` (the latter
# needs NASM + a working cl.exe stdalign probe, which isn't guaranteed locally).
russh = { version = "0.61", default-features = false, features = ["ring", "flate2", "rsa"] }

# data / utils
anyhow = "1"
thiserror = "2"
bytes = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
arc-swap = "1"
notify = "6"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
