[workspace]
resolver = "2"
members = [
    "crates/tn-core",
    "crates/tn-pty",
    "crates/tn-config",
    "crates/tn-shell",
    "crates/tn-blocks",
    "crates/tn-editor",
    "crates/tn-agent",
    "crates/tn-ai",
    "crates/tn-cli",
    "crates/tn-ui",
    "crates/tn-app", "test_load",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
rust-version = "1.85"
repository = "https://github.com/tingruiyi/Tn"

[workspace.dependencies]
# internal crates
tn-core = { path = "crates/tn-core" }
tn-pty = { path = "crates/tn-pty" }
tn-config = { path = "crates/tn-config" }
tn-shell = { path = "crates/tn-shell" }
tn-blocks = { path = "crates/tn-blocks" }
tn-editor = { path = "crates/tn-editor" }
tn-agent = { path = "crates/tn-agent" }
tn-ai = { path = "crates/tn-ai" }
tn-ui = { path = "crates/tn-ui" }

# GPU UI framework (Zed). DirectX 11 + DirectWrite on Windows.
gpui = "0.2"

# Win32 glue for the Quick Terminal (M5): global hotkey (RegisterHotKey) +
# topmost/borderless floating window (SetWindowPos) that gpui doesn't expose.
# Pinned to gpui's `windows` version so the crate is shared, not duplicated.
windows = "0.61"
raw-window-handle = "0.6"  # extract the OS HWND from a gpui Window

# terminal engine + pty
alacritty_terminal = "0.26"
portable-pty = "0.9"
vte = "0.15"   # low-level VT parser for the shell-integration OSC bypass (tn-shell)

# async (pty pumps; ssh backend in M2)
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "sync", "macros", "time"] }
futures = "0.3"

# SSH backend (M2b). russh gives async channels; we bridge to the sync PtyBackend.
# Use the `ring` crypto backend instead of the default `aws-lc-rs` (the latter
# needs NASM + a working cl.exe stdalign probe, which isn't guaranteed locally).
russh = { version = "0.61", default-features = false, features = ["ring", "flate2", "rsa"] }

# data / utils
anyhow = "1"
thiserror = "2"
bytes = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
arc-swap = "1"
notify = "6"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# benchmarking (dev-only; `cargo bench`). Hot-path baselines for perf work.
criterion = "0.5"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

# тФАтФА Debug-build ш┐РшбМцАзшГ╜(х╝АхПСцЬЯш╖СщлШщвСщЗНч╗Ш TUI хжВ Claude Code чЪДхЕ│щФо)тФАтФАтФАтФАтФАтФА
# щ╗Шшод dev profile хЕи opt-level=0уАВClaude Code(Ink)цпПчзТцХ░хНБцмбцХ┤х▒ПщЗНч╗Ш,чГнш╖пх╛ДхЬи
# alacritty VT `advance`уАБtn-core `snapshot`/`row_runs`уАБgpui х╕Гх▒А/paint тАФтАФ ш┐Щф║ЫхЬи
# opt0 ф╕ЛцЕвхЗахНБхАН,чЫ┤цОешбичО░ф╕║ш╛УхЕехНбщб┐ + щЭвцЭ┐цЛЙш╡╖цЕв,х╣╢цККщЫ╢хИЖщЕН/channel/хвЮщЗПшзгцЮРчнЙ
# щА╗ш╛Сф╝ШхМЦ(ф╝ШхМЦ 5┬╖6┬╖29┬╖31┬╖41)чЪДцФ╢чЫКхоМхЕиц╖╣ц▓б(хоГф╗мхПкчЬБх╕╕цХ░хЫахнР)уАВ
# щЕНцЦ╣(Bevy хРМцм╛уАМoptimize deps, debug your codeуАН):шЗкх╖▒чЪД crate ш╜╗х║жф╝ШхМЦ
# (opt1,хвЮщЗПч╝ЦшпСф╗ЕчХецЕвуАБцЦнчВ╣ф╗НхПпчФи),цЙАцЬЙчммф╕ЙцЦ╣ф╛Эш╡ЦщЗНх║жф╝ШхМЦ(opt3,ф╗ЕщжЦцмбч╝ЦшпСцЕв
# ф╕Ацмб)уАВ`*` х╖▓шжЖчЫЦхОЯхЕИхНХхИЧчЪД image/png/calamine чнЙшзгчаБх║У(ф╝ШхМЦ 24),цХЕф╕НхЖНхНХхИЧуАВ
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
