[workspace]
resolver = "2"
members = [
    "crates/tn-core",
    "crates/tn-pty",
    "crates/tn-config",
    "crates/tn-shell",
    "crates/tn-blocks",
    "crates/tn-editor",
    "crates/tn-agent",
    "crates/tn-ai",
    "crates/tn-cli",
    "crates/tn-ui",
    "crates/tn-app",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
rust-version = "1.85"
repository = "https://github.com/tingruiyi/Tn"

[workspace.dependencies]
# internal crates
tn-core = { path = "crates/tn-core" }
tn-pty = { path = "crates/tn-pty" }
tn-config = { path = "crates/tn-config" }
tn-shell = { path = "crates/tn-shell" }
tn-blocks = { path = "crates/tn-blocks" }
tn-editor = { path = "crates/tn-editor" }
tn-agent = { path = "crates/tn-agent" }
tn-ai = { path = "crates/tn-ai" }
tn-ui = { path = "crates/tn-ui" }

# GPU UI framework (Zed). DirectX 11 + DirectWrite on Windows.
gpui = "0.2"

# Win32 glue for the Quick Terminal (M5): global hotkey (RegisterHotKey) +
# topmost/borderless floating window (SetWindowPos) that gpui doesn't expose.
# Pinned to gpui's `windows` version so the crate is shared, not duplicated.
windows = "0.61"
raw-window-handle = "0.6"  # extract the OS HWND from a gpui Window

# terminal engine + pty
alacritty_terminal = "0.26"
portable-pty = "0.9"
vte = "0.15"   # low-level VT parser for the shell-integration OSC bypass (tn-shell)

# async (pty pumps; ssh backend in M2)
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "sync", "macros", "time"] }
futures = "0.3"

# SSH backend (M2b). russh gives async channels; we bridge to the sync PtyBackend.
# Use the `ring` crypto backend instead of the default `aws-lc-rs` (the latter
# needs NASM + a working cl.exe stdalign probe, which isn't guaranteed locally).
russh = { version = "0.61", default-features = false, features = ["ring", "flate2", "rsa"] }

# data / utils
anyhow = "1"
thiserror = "2"
bytes = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
arc-swap = "1"
notify = "6"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# benchmarking (dev-only; `cargo bench`). Hot-path baselines for perf work.
criterion = "0.5"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

# ── Debug-build 运行性能(开发期跑高频重绘 TUI 如 Claude Code 的关键)──────
# 默认 dev profile 全 opt-level=0。Claude Code(Ink)每秒数十次整屏重绘,热路径在
# alacritty VT `advance`、tn-core `snapshot`/`row_runs`、gpui 布局/paint —— 这些在
# opt0 下慢几十倍,直接表现为输入卡顿 + 面板拉起慢,并把零分配/channel/增量解析等
# 逻辑优化(优化 5·6·29·31·41)的收益完全淹没(它们只省常数因子)。
# 配方(Bevy 同款「optimize deps, debug your code」):自己的 crate 轻度优化
# (opt1,增量编译仅略慢、断点仍可用),所有第三方依赖重度优化(opt3,仅首次编译慢
# 一次)。`*` 已覆盖原先单列的 image/png/calamine 等解码库(优化 24),故不再单列。
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
