[package]
name = "tn-core"
description = "Tn terminal engine: alacritty_terminal wrapper (grid, parser, snapshot). Headless, no GPUI."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
alacritty_terminal.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
tracing.workspace = true
