[package]
name = "tn-core"
description = "Tn terminal engine: alacritty_terminal wrapper (grid, parser, snapshot). Headless, no GPUI."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
alacritty_terminal.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
smol_str = "0.3.2"
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true

# Hot-path benchmarks (待优化清单 §7.3): `cargo bench -p tn-core`.
[[bench]]
name = "engine"
harness = false
