[package]
name = "tn-ui"
description = "Tn GPUI front-end: terminal view, input, rendering. The only GPUI-linked library."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tn-core.workspace = true
tn-pty.workspace = true
tn-config.workspace = true
tn-shell.workspace = true
tn-blocks.workspace = true
tn-ai.workspace = true
gpui.workspace = true
futures.workspace = true
anyhow.workspace = true
tracing.workspace = true
raw-window-handle.workspace = true

# Quick Terminal (M5) global hotkey + topmost window glue — Windows only.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_Debug", # MessageBeep (audio bell, 待优化清单 §3.8)
] }
