[package]
name = "tn-ui"
description = "Tn GPUI front-end: terminal view, input, rendering. The only GPUI-linked library."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tn-core.workspace = true
tn-pty.workspace = true
tn-config.workspace = true
tn-shell.workspace = true
tn-blocks.workspace = true
tn-ai.workspace = true
gpui.workspace = true
futures.workspace = true
anyhow.workspace = true
tracing.workspace = true
raw-window-handle.workspace = true
serde.workspace = true
serde_json.workspace = true
notify.workspace = true # 活动栏「本次改动」文件监听(变化即刷新)
smol_str = "0.3.2"

# Document Preview Enhancements
pdfium-render = "0.9.1"
calamine = "0.35.0"
dotext = "0.1.1"
content_inspector = "0.2.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
encoding_rs = "0.8.35"
image = "0.25.9"
sysinfo = "0.36.1"


# Quick Terminal (M5) global hotkey + topmost window glue — Windows only.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",                 # SetWindowSubclass/DefSubclassProc (IME key-routing fix) + Shell_NotifyIconW (tray)
    "Win32_UI_HiDpi",                 # GetDpiForWindow (logical→physical for the launcher card window)
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_Debug", # MessageBeep (audio bell, 待优化清单 §3.8)
    "Win32_System_LibraryLoader",     # GetModuleHandleW (tray window class registration)
    "Win32_UI_Input_Ime",             # ImmAssociateContextEx — disable IME for SSH prompt
] }
